# pos-terceiro-bimestre

./: README.md  pyproject.toml
aprendizado_supervisionado/: case_um.ipynb  livro_unidade_um.ipynb
projeto_ciencia_dados/: README(book).md
python_machine_learning/: README.md  estudo_orientado_um.ipynb
